fix alignment of headertext

--- a/public/stylesheets/timeline.css
+++ b/public/stylesheets/timeline.css
@@ -1,4 +1,4 @@
-html {
+.container {
     text-align: center;
 }
 
